# guiora

./: .gitignore  Cargo.toml  README.md  emitter.ts  makefile  mod.ts  types.ts
examples/: main.ts
lib/: guiora.rs
src/: emitter.ts  lib.rs  types.ts
src/handler/: button-handler.ts
src/structures/: button.ts  canvas.ts  color.ts  element.ts  guiora.ts  index.ts  mouse.ts  point.ts  rect.ts  text.ts
src/utils/: colors.ts  lib.ts
