[package]
name = "guiora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guiora"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "guiora"
path = "src/lib.rs"

[dependencies]
gtk = "0.17.0"
glib = "0.17.5"