[package]
name = "guiora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guiora"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "guiora"
path = "src/lib.rs"

[dependencies]
sdl2 = "0.35.2"
deno_bindgen = "0.7.0"
serde = { version = "1", features = ["derive"] }